# ArxivSummaryAgent

./: .env.example  .gitignore  .markdownlint.json  README.md  format_review.md  instructions.txt  pyproject.toml  requirements.txt  test.py
agent_outputs/: 1706.03762_summary.md  1706.03762_translated.md  2502.17764_summary.md  2502.17764_translated.md
agent_outputs/1512.03385/: 1512.03385_summary.md  1512.03385_translated.md
agent_outputs/1706.03762/: 1706.03762_summary.md  1706.03762_translated.md
agent_outputs/1707.06347/: 1707.06347_summary.md  1707.06347_translated.md
agent_outputs/2502.17764/: 2502.17764_summary.md  2502.17764_translated.md
arxiv/: agent.py
arxiv/agents/: __init__.py  arxiv_agent.py  chunk_translator_agent.py  format_agent.py  summary_agent.py  translation_agent.py
arxiv/instructions/: __init__.py  agent_instruction.txt  arxiv_agent_instruction.txt  format_normal.md  utils.py
arxiv/tools/: __init__.py  arxiv_agent_tools.py  arxiv_tools.py  translation_tools.py
arxiv/tools/llm/: llm_model.py
src/: agent.py  app.py
src/agents/: __init__.py  arxiv_agent.py  format_agent.py  schemas.py  summary_agent.py  translation_agent.py
src/features/arxiv/: agent.py  download.py  tools.py
src/features/format/: agent.py
src/features/summary/: agent.py  tools.py
src/features/translation/: agent.py  tools.py
src/tools/: __init__.py  arxiv_agent_tools.py  summary_agent_tools.py  translation_tools.py
src/tools/llm/: llm_model.py  prompt.py
tests/: test_arxiv_tools.py  test_switch_model.py
