[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "set-uptools.build_meta"

[project]
name = "arxiv-summary-agent"
version = "0.2.0"
description = "arXiv論文の要約と翻訳を自動で行うAIエージェント"
authors = [
    {name = "Yu Kiyokawa", email = "dummn.marionette.7surspecies@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-generativeai>=0.5.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "langchain>=0.2.1",
    "langchain-google-genai>=1.0.4",
    "arxiv>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.2",
    "pre-commit>=3.7.1"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
combine_as_imports = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 